[tool.poetry]
name = "ml-zoomcamp"
version = "0.1.0"
description = ""
authors = ["vardhan <vardhanshah1998@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<4.0"
numpy = "^2.3.3"
pandas = "^2.3.2"
scikit-learn = "^1.7.2"
seaborn = "^0.13.2"
jupyter = "^1.1.1"
jupyter-ai = "^2.31.6"
langchain-together = "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
